elasticsearch/2.0.0/templates/01-es_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esnode
  labels:
    app: esnode
spec:
  serviceName: hotes-cluster-9300
  replicas: 3
  selector:
    matchLabels:
      app: esnode
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: esnode
    spec:
      serviceAccountName: nfs-sky-es
      terminationGracePeriodSeconds: 300
      containers:
        - name: elasticsearch
          resources:
            requests:
              memory: 1.5Gi
              cpu: 0.01
            limits:
              memory: 1.5Gi
              cpu: 15
          securityContext:
            privileged: true
            runAsUser: 0
            capabilities:
              add:
                - IPC_LOCK
                - SYS_RESOURCE
          image: 192.168.37.30/library/docker.elastic.co/elasticsearch/elasticsearch-oss@sha256:8ab8291e47460c686529dcbc1efedeb48bf983765cb93cbb4a55337f4ec256f4
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 5
          ports:
            - containerPort: 9200
              name: es-http
            - containerPort: 9300
              name: es-transport
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
      volumes:
        - name: elasticsearch-config
          configMap:
            name: hotes-config
            items:
              - key: elasticsearch.yml
                path: elasticsearch.yml
  volumeClaimTemplates:
    - metadata:
        name: es-data
        annotations:
          volume.beta.kubernetes.io/storage-class: sc-sky-es
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
