elasticsearch/2.0.0/templates/sa.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-sky-es
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-sky-es
  template:
    metadata:
      labels:
        app: nfs-sky-es
    spec:
      serviceAccount: nfs-sky-es
      containers:
      - name: nfs-sky-es
        image: quay.io/external_storage/nfs-client-provisioner:latest
        volumeMounts:
        - name: nfs-client-root
          mountPath: /persistentvolumes
      volumes:
      - name: nfs-client-root
        nfs:
          server: 192.168.37.30
          path: /data/nfs/elasticsearch
